[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/gui/EnterSampleDialog.gd" type="Script" id=1]
[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=2]

[node name="EnterSampleDialog" type="ConfirmationDialog"]
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Enter Sample Data"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 384.0
margin_bottom = 249.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NameContainer"]
margin_top = 5.0
margin_right = 59.0
margin_bottom = 26.0
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/NameContainer"]
margin_left = 63.0
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Sample1"

[node name="VisibleCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 384.0
margin_bottom = 64.0
text = "Is Visible"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 384.0
margin_bottom = 249.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttribContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 384.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="about_to_show" from="." to="." method="_on_EnterSampleDialog_about_to_show"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/VisibleCheckbox" to="." method="_on_VisibleCheckbox_toggled"]
